==================================================================================================
Changes for 2.9 release 
==================================================================================================
- Bug Fix (743): Increase ADC0 allowable wait to 20 mu-sec
- Bug Fix (751): Modified install script.
- Bug Fix (776): EXC part not operating properly under all selection conditions.
- Bug Fix (756): Added monitoring of the filter module 'Decimation' and 'Hold Output' settings as
  part of the common filter SWSTAT EPICS record. This required changes to:
  -  main.c, skeleton.st and fm10Gen.c to add the two extra bits.
  - In skeleton.st, moved the clr history and status to req diff bit up two to accomodate new
    switch monitors.
  - Modified the filter MEDM files to provide RED indicator next to 'GUARDIAN SET' related display
    icon to indicate when filter switch request != status.
  - Modified FILTALH.adl screen to monitor new bits.
  - Had to modify FiltCtrl2.pm to NOT pass these bits at control output port.
- Bug Fix (662): Fix Phase part to allow FE DAQ to record user settings.
- Bug Fix (556): Fix WfsPhase part to allow FE DAQ to record user settings.
- Bug Fix (732): AUTOCAL of 18bit DAC modules made the default compile option in feCodeGen.pl.
- Bug Fix (505): Added warning bit (bit 10) to STATEWORD to be set if either the Coeff File or
  DAQ config file has changed.
- Bug Fix (772,773): SDF save issues bug fixes perfomed in src/epics/seq/main.c.
- Bug Fix (729): Errant value if input to TrueRMS = 0.0.
- Bug Fix (764): Modified RampMuxMatrix part to only check load ramp command at 16Hz after a
  16Hz boundary.  This allows load command to be captured by DAQ before being cleared by the FE
  code.
- Bug Fix (732,765): Correct DAQD output for "status channel 2","status channel 3" to fix 
    formatting, speed-up - incremented protocol from 12.0 to 12.1