@@ -1,6 +1,7 @@
 ==================================================================================================
 Changes for 2.9 release 
 ==================================================================================================
+- Bug Fix (759): Fix DAQ calculation of science frame 'Fast Chans' on stand-alone
 - Bug Fix (743): Increase ADC0 allowable wait to 20 mu-sec
 - Bug Fix (751): Modified install script.
 - Bug Fix (776): EXC part not operating properly under all selection conditions.
